# course_job_5

./: .env.exemple  README.md  pyproject.toml
src/: db_manager.py  main.py  tables.py  utils.py
