[tool.poetry]
name = "course-job-5"
version = "0.1.0"
description = ""
authors = ["gelena <helenatcitok@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.0.0"
isort = "^5.13.2"
mypy = "^1.8.0"
black = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
